--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,9 @@
                 <a href="{% url 'post_new' %}" class="top-menu">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu">
+                    <span class="glyphicon glyphicon-edit"></span>
+                </a>
             {% endif %}
             <a href="/">Duha357's Blog</a>
         </h1>
