--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,11 @@
                 <a href="{% url 'post_draft_list' %}" class="top-menu">
                     <span class="glyphicon glyphicon-edit"></span>
                 </a>
+                <p class="top-menu">Привет {{ user.username }} <small><a href="{% url 'logout' %}">(Выйти)</a></small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu">
+                    <span class="glyphicon glyphicon-lock"></span>
+                </a>
             {% endif %}
             <a href="/">Duha357's Blog</a>
         </h1>
