Myblog version 1.0007 - MySql replaced by PostgreSQL database - Comments model added - Comments form on site added

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
             <div class="date">
                 <p>Опубликовано: {{ post.published_date }}</p>
             </div>
+            <a href="{% url 'post_detail' pk=post.pk %}">Комментариев: {{ post.approved_comments.count }}</a>
         </div>
     {% endfor %}
 {% endblock %}
